--- a/app/src/main/res/layout/layout_hike_header.xml
+++ b/app/src/main/res/layout/layout_hike_header.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge>
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       xmlns:app="http://schemas.android.com/apk/res-auto"
+       tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">
+
     <androidx.cardview.widget.CardView
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
             android:layout_height="230dp"
             android:layout_marginBottom="15dp"
             app:cardElevation="10dp"
