--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -34,6 +34,11 @@
     <dimen name="button_margin_bottom">130dp</dimen>
 
 
+    <!--Hike size-->
+    <dimen name="image_button_width">70dp</dimen>
+    <dimen name="image_button_height">70dp</dimen>
+
+
 
 
 
