--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -14,6 +14,7 @@
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
+                app:title=""
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
                 android:background="@color/colorPrimary"
@@ -53,11 +54,10 @@
 
         <FrameLayout
                 android:id="@+id/rootContainer"
-                android:layout_below="@+id/collapseView"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_below="@id/collapseView"
                 android:layout_alignParentBottom="true">
-
         </FrameLayout>
     </RelativeLayout>
 
