--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -64,7 +64,7 @@
     </RelativeLayout>
 
     <include
-            android:visibility="visible"
+            android:id="@+id/rootBottomNavigationBar"
             layout="@layout/layout_bottom_navigation_view"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
