--- a/app/src/main/res/layout/fragment_create_new_hike.xml
+++ b/app/src/main/res/layout/fragment_create_new_hike.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_marginTop="?actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -12,7 +13,9 @@
             android:layout_marginBottom="@dimen/margin_xs"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/spinnerCategory"/>
+            app:layout_constraintBottom_toTopOf="@+id/spinnerCategory"
+            android:layout_marginTop="@dimen/margin_xs"
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <Spinner
             android:id="@+id/spinnerCategory"
