--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -38,6 +38,8 @@
     <dimen name="image_button_width">70dp</dimen>
     <dimen name="image_button_height">70dp</dimen>
 
+    <!--Widget size-->
+    <dimen name="tabs_height">30dp</dimen>
 
 
 
