--- a/app/src/main/res/layout/activity_root.xml
+++ b/app/src/main/res/layout/activity_root.xml
@@ -44,47 +44,28 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-        <RelativeLayout
+        <View android:id="@+id/collapseView"
+              android:visibility="visible"
+              android:layout_width="match_parent"
+              android:layout_height="?actionBarSize"/>
+
+        <FrameLayout
+                android:id="@+id/rootContainer"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-            <View android:id="@+id/collapseView"
-                  android:visibility="visible"
-                  android:layout_width="match_parent"
-                  android:layout_height="?actionBarSize"/>
-
-            <FrameLayout
-                    android:id="@+id/rootContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_below="@id/collapseView"/>
-        </RelativeLayout>
-
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-                android:id="@+id/rootFab"
-                android:src="@drawable/ic_add"
-                android:layout_width="59dp"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/margin_xs"
-                android:layout_marginEnd="@dimen/margin_xs"
-                android:backgroundTint="@color/colorPrimary"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/rootBottomNavigationBar"/>
-
-
+                android:layout_height="match_parent"
+                android:layout_below="@id/collapseView"/>
         <include
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:id="@+id/rootBottomNavigationBar"
                 layout="@layout/layout_bottom_navigation_view"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_alignBottom="@+id/rootContainer"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentEnd="true"/>
+    </RelativeLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
