--- a/app/src/main/res/layout/fragment_create_new_hike.xml
+++ b/app/src/main/res/layout/fragment_create_new_hike.xml
@@ -2,7 +2,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_marginTop="?actionBarSize"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -13,7 +12,6 @@
             android:layout_marginBottom="@dimen/margin_xs"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@+id/spinnerCategory"
             android:layout_marginTop="@dimen/margin_xs"
             app:layout_constraintTop_toTopOf="parent"/>
 
@@ -21,11 +19,11 @@
             android:id="@+id/spinnerCategory"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/margin_xs"
             android:entries="@array/category_list"
-            app:layout_constraintBottom_toTopOf="@+id/etBossHike"
             app:layout_constraintStart_toStartOf="@+id/cvDateOfHike"
-            app:layout_constraintEnd_toEndOf="@+id/cvDateOfHike"/>
+            app:layout_constraintEnd_toEndOf="@+id/cvDateOfHike"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/cvDateOfHike"/>
 
     <EditText
             android:id="@+id/etBossHike"
@@ -35,10 +33,9 @@
             android:inputType="datetime"
             android:textColor="@color/colorPrimary"
             android:textColorHint="@color/colorPrimary"
-            android:layout_marginBottom="@dimen/margin_xs"
-            app:layout_constraintBottom_toTopOf="@+id/etHikeRegion"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/spinnerCategory"/>
 
     <EditText
             android:id="@+id/etHikeRegion"
@@ -50,8 +47,8 @@
             android:textColorHint="@color/colorPrimary"
             app:layout_constraintStart_toEndOf="@+id/etBossHike"
             app:layout_constraintEnd_toStartOf="@+id/etBossHike"
-            android:layout_marginBottom="@dimen/margin_xs"
-            app:layout_constraintBottom_toTopOf="@+id/btnRegister"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/etBossHike"/>
 
     <Button
             android:id="@+id/btnRegister"
@@ -63,7 +60,7 @@
             android:textColor="@color/text_white_selected"
             app:layout_constraintStart_toEndOf="@+id/etHikeRegion"
             app:layout_constraintEnd_toStartOf="@+id/etHikeRegion"
-            android:layout_marginBottom="@dimen/button_margin_bottom"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/etHikeRegion"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
