--- a/app/src/main/res/layout/fragment_my_hikes.xml
+++ b/app/src/main/res/layout/fragment_my_hikes.xml
@@ -1,22 +1,22 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_content"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
 
-    <TableLayout
-        android:id="@+id/top_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/tab_size"
-        app:tabTextColor="@color/text_white_unselected"
-        app:tabSelectedTextColor="@color/text_white_selected"
-        android:background="@color/colorPrimary" />
+    <androidx.recyclerview.widget.RecyclerView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/hikesRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/view_pager_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/rootFab"
+            android:src="@drawable/ic_add"
+            android:layout_width="59dp"
+            android:layout_gravity="bottom|end"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_fab"
+            android:layout_marginEnd="@dimen/margin_l"
+            android:backgroundTint="@color/colorPrimary"/>
+</FrameLayout>
