--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,6 +14,7 @@
     <dimen name="margin_xl">32sp</dimen>
     <dimen name="margin_xxl">44sp</dimen>
     <dimen name="margin_xxxl">56sp</dimen>
+    <dimen name="margin_fab">82sp</dimen>
 
     <dimen name="size_xs">8sp</dimen>
     <dimen name="size_s">14sp</dimen>
@@ -41,6 +42,7 @@
 
     <!--Widget size-->
     <dimen name="tabs_height">30dp</dimen>
+
 
 
 
