--- a/app/src/main/res/layout/item_card_user.xml
+++ b/app/src/main/res/layout/item_card_user.xml
@@ -2,7 +2,7 @@
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view_participant"
+        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/card_view_participant"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
@@ -24,11 +24,10 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/hike_walking_back"
                 card_view:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
                 card_view:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="8dp"
-                card_view:layout_constraintBottom_toBottomOf="parent"/>
+        />
 
 
         <TextView
@@ -51,6 +50,18 @@
                 card_view:layout_constraintBottom_toBottomOf="parent"
                 android:layout_marginEnd="8dp"
                 card_view:layout_constraintEnd_toEndOf="parent"/>
+
+        <Spinner
+                android:id="@+id/spinnerPost"
+                android:layout_width="@dimen/button_width"
+                android:layout_height="@dimen/button_height"
+                android:entries="@array/user_post_list"
+                android:layout_marginTop="@dimen/margin_xs"
+                card_view:layout_constraintTop_toBottomOf="@+id/iv_user_image"
+                android:layout_marginBottom="8dp"
+                card_view:layout_constraintBottom_toBottomOf="parent"
+                card_view:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="16dp"/>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
